bundled_metadata/force-app/main/default/objects/Store_KPI__c/Store_KPI__c.object-meta.xml
<CustomObject>
    <label>Store KPI</label>
    <nameField>
        <label>Store KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>