bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store KPIs</relationshipLabel>
    <relationshipName>Store_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>