bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/Country_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Iso_Code__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Markets</valueSetName>
    </valueSet>
</CustomField>