bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/Cust_External_id__c.field-meta.xml
<CustomField>
    <fullName>Cust_External_id__c</fullName>
    <externalId>true</externalId>
    <label>Customer External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>