bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/Customer_Attribute_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attribute_1__c</fullName>
    <label>Customer Attribute 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>