bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/Customer_Attribute_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attribute_2__c</fullName>
    <label>Customer Attribute 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>