bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>Store KPI External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>