bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/Extra_Info__c.field-meta.xml
<CustomField>
    <fullName>Extra_Info__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>