bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>