bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/KPI_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>KPI_Calculation_Date__c</fullName>
    <description>The date when the KPI value was calculated.</description>
    <label>Calculation Date</label>
    <type>Date</type>
</CustomField>