bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/KPI_Denominator_Value__c.field-meta.xml
<CustomField>
    <fullName>KPI_Denominator_Value__c</fullName>
    <label>KPI Denominator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>