bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/KPI_Target__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target__c</fullName>
    <label>KPI Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>