bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/KPI_Target_Compliance__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target_Compliance__c</fullName>
    <label>KPI Target Compliance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>