bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/KPI_Target_Variance__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target_Variance__c</fullName>
    <formula>KPI_Target__c -  KPI_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Target Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>