bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>