bundled_metadata/force-app/main/default/objects/Store_KPI__c/fields/Scoring_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picos Opportunity</label>
    <type>Checkbox</type>
</CustomField>